--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -30,3 +30,13 @@ jobs:
     - name: Run tests
       run: |
         make format lint test
+
+        - name: Run data analysis
+        run: |
+          python scripts/generate_report.py
+
+    - name: Upload report as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: data-report
+        path: report.md
