--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-black
-markdownify
-numpy
-pandas
-pylint
-pytest
-ydata-profiling
+black==24.8.0
+markdownify==0.13.1
+matplotlib==3.7.5
+numpy==1.24.4
+pandas==2.0.3
+pylint==3.2.7
+pytest==8.3.3
+ydata-profiling==4.10.0
