--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -35,6 +35,14 @@ jobs:
       run: |
         venv/bin/python scripts/generate_md.py
 
+    - name: Commit and push report.md
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add report.md
+        git commit -m "Add generated Markdown report"
+        git push
+
     - name: Upload report as artifact
       uses: actions/upload-artifact@v4
       with:
